2009-02-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYBarRenderer.java
    (barAlignmentFactor): New field,
    (XYBarRenderer): Initialise new field,
    (getBarAlignmentFactor): New method,
    (setBarAlignmentFactor): Likewise,
    (drawItem): Shift bar if alignment factor is set,
    (equals): Check new field.

2009-02-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
    (errorIndicatorStroke): New field,
    (StatisticalLineAndShapeREnderer): Initialise new field,
    (getErrorIndicatorStroke): New method,
    (setErrorIndicatorStroke): Likewise,
    (drawItem): Use errorIndicatorStroke,
    (equals): Check new field,
    (readObject): Handle new field,
    (writeObject): Likewise.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DefaultHeatMapDataset.java: New file,
    * source/org/jfree/data/general/HeatMapDataset.java: Likewise,
    * source/org/jfree/data/general/HeatMapUtilities.java: Likewise,
    * tests/org/jfree/data/general/junit/DefaultHeatMapDatasetTests.java:
      Likewise.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/CombinedDataset.java: Deprecated,
    * source/org/jfree/data/general/SubSeriesDataset.java: Likewise.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2564636:
    * source/org/jfree/data/time/Month.java
    (Month(Date, TimeZone, Locale)): Use locale.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (createStackedValueList): Deprecated,
    (createStackedValueList(CategoryDataset, Comparable, int[], double,
    boolean)): New method,
    (drawItem): Check for hidden series.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
